add code review and fix tests
fixed readling list

fixed readling list

moved pipes to shared instance

fixed unit test

fixed unit test

fixed unit test

--- a/angular.json
+++ b/angular.json
@@ -344,6 +344,38 @@
           }
         }
       }
+    },
+    "shared-pipes": {
+      "projectType": "library",
+      "root": "libs/shared/pipes",
+      "sourceRoot": "libs/shared/pipes/src",
+      "prefix": "tmo",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/pipes/tsconfig.lib.json",
+              "libs/shared/pipes/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/shared/pipes/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/pipes/jest.config.js",
+            "tsConfig": "libs/shared/pipes/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "libs/shared/pipes/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
+        }
+      }
     }
   },
   "cli": {
